# thalassoica

./: .env  .gitignore  1_fetch_and_save_sentinel.py  2_parquet_to_geodb.py  3_find_intersections_from_db.py  4_find_overlaps_in_file.py  4_find_overlaps_in_table.py  5_export_uuids.py  5_filter_rows_by_criterion.py  5a_filter_rows_by_overlap.py  5b_filter_rows_by_era5_criterion.py  6_filter_rows_by_criterion.py  6_find_overlaps_across_tables.py  7_export_uuids_from_table.py  8t_print_matching_paths.py  9_node_search_download.py  9t_print_matching_paths.py  copernicus_access_token.py  direct_parquet_to_geodb.py  download_sentinel.sbatch  download_test_image.py  export_uuids.py  fetch_and_save_sentinel.py  filter_rows_by_criterion.py  find_intersections_from_db.py  find_intersections_from_file.py  find_overlaps_in_file.py  generate_coords.py  new_structure.txt  node_search_download.py  output.parquet  parquet_to_geodb.py  pyproject.toml  pystac_download_sentinel_image_shapes.py  run_thalassoica.py  run_thalassoica.sh  save_tiffs.py  seaice.lmod  sentinelsat_download_sentinel_image_shapes.py  setup_access_token.py  (+5 more)
deprecated/: cytrack_to_parquet.py  download_test_image.py  pystac_sentinel_to_parquet.py
deprecated/download_mechanism_extras/: save_direct_tiff.py  save_zip_tiff.py
download_mechanism_extras/: save_zip_tiffs.py
pipeline/export/: dump_satellite.py
pipeline/filter/: era5_criterion.py  product_type.py
pipeline/search/: intersections.py
pipeline/utils/: load_parquet.py
sentinel1/download/: copernicus_access_token.py  download_images.py  download_metadata.py
sentinel1/export/: download_information.py
swot/convert/: netcdf_to_tiff.py
swot/download/: download_netcdf.py
swot/export/: download_information.py
swot/extract/: extract_netcdf_to_parquet.py
utils/: test.py
viz/: db.py  display_overlayed_images.py  geo_utils.py  js_map_app.py  view_overlaps.py  view_tiffs.py
(+7 files in other folders)
