[project]
name = "overlapping-sea-ice-satellite-imagery-constraint-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.1",
    "postgis>=1.0.4",
    "psycopg2>=2.9.11",
    "pystac>=1.14.3",
    "pystac-client>=0.9.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "pyarrow==22.0.0",
    "ipykernel",
    "duckdb==1.4.4",
    "pyfiglet>=1.0.4",
]
