[project]
name = "overlapping-sea-ice-satellite-imagery-constraint-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.1",
    "postgis>=1.0.4",
    "psycopg2>=2.9.11",
    "pystac>=1.14.3",
    "pystac-client>=0.9.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "pyarrow==22.0.0",
    "ipykernel",
    "duckdb==1.4.4",
    "pyfiglet>=1.0.4",
    "dotenv>=0.9.9",
    "python-dotenv[cli]>=1.2.1",
    "pycurl>=7.45.7",
    "boto3>=1.42.57",
    "s3cmd>=2.4.0",
    "polars>=1.38.1",
    "sentinelhub>=3.11.4",
    "cdsapi>=0.7.7",
    "xarray>=2026.2.0",
    "h5py==3.14.0",
    "h5netcdf>=1.8.1",
    "scipy>=1.17.1",
    "dask>=2026.3.0",
    "zarr>=3.1.6",
    "earthdata>=0.4.2",
    "netcdf4>=1.7.4",
    "inquirer>=3.4.1",
    "gcsfs>=2026.3.0",
    "asyncio>=4.0.0",
    "gdal>=3.12.3",
    "rioxarray>=0.22.0",
]
